# ProDjangoPL

./: .editorconfig  .flake8  Makefile  README.md  pyproject.toml
core/core/: settings.py
